--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
 	font-size: 11pt;
 	color: #c6c6c7;
 	font-family: 'Play', sans-serif;
+	background-color: gray;
 }
 
 h1 {
@@ -124,8 +125,8 @@ a {
 	position: fixed;
 	top:0px;
 	width:100%;
-	height:50px;
-	line-height: 40px;
+	height:60px;
+	line-height: 60px;
 	text-align:center;
 	z-index:1000;
 	background-color:rgba(50,40,208,0.9);
@@ -148,8 +149,8 @@ a {
 	width:900px;
 }
 
-#opa {
-	margin-top: 7px;
+#logo {
+	margin-top: 10px;
 	margin-right: 30px;
 }
 
