--- a/style.css
+++ b/style.css
@@ -6,12 +6,15 @@ body {
 	background-color: black;
 }
 
+a:link {color: #f5701f; text-decoration: none; }
+a:active {color: #f5701f; text-decoration: none; }
+a:visited {color: #f5701f; text-decoration: none; }
+a:hover {color: #f5701f; text-decoration: underline; }
+
 h1 {
  	font-family: 'Play', sans-serif; 
 	font-weight: normal;
 	font-size: 24pt;
-	margin: 0px;
-	margin-top: 20px;
         color: #f5701f;
 }
 
@@ -20,8 +23,12 @@ h2 {
 	color: #f5701f;
 	font-size: 18pt;
 	font-weight: normal;
-	margin-bottom: 3px;
-	margin-top: 15px;
+}
+
+h3 {
+        font-family: 'Play', sans-serif; 
+        color: #f5701f;
+        font-size: 12pt;    
 }
 
 a {
@@ -69,14 +76,11 @@ a {
 	text-align: center;	
 }
 
-#firstText h1 {
-	margin-top: 0px;
-}
-
 #firstText {
 	position: relative;
 	top: 80px;
 	width: 900px;
+        height: 1000px;
 }
 
 #firstText .column {
@@ -104,17 +108,22 @@ a {
 }
 
 #firstText .more {
-	width: 100%;
-	float:left;
-	text-align: center;	
-	margin-top: 40px;
+        top: 20px;
+	left: 20px;
+	text-align: center;
+        width: 200px;
 }
 
 #aMore {
-	padding: 10px;
-	border: solid;
-	border-width: 1px;	
+    top: 195px;
+    left: 20px;
+    position: relative;
+    display: block;
+    width: 350px;
+    height: 70px;
+    border: 1px solid;  
 }
+
 
 #second {
 	width:900px;
@@ -123,7 +132,7 @@ a {
 
 .first {
 	background-image: url(pict/background_1.jpg);
-	height: 1200px;
+	height: 1100px;
 }
 
 
