--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
 	margin: 0px;	
-	font-size: 12pt;
+	font-size: 9pt;
 	color: white;
-	font-family: 'Play', sans-serif;
+	font-family: Tahoma, Verdana, Segoe, sans-serif;
 	background-color: black;
 }
 
@@ -20,7 +20,7 @@ h1 {
 
 h2 {
         font-family: 'Play', sans-serif; 
-	color: #f5701f;
+	color: white;
 	font-size: 18pt;
 	font-weight: normal;
 }
@@ -28,7 +28,8 @@ h2 {
 h3 {
         font-family: 'Play', sans-serif; 
         color: #f5701f;
-        font-size: 12pt;    
+        font-size: 12pt;   
+        margin-bottom: 5px;
 }
 
 a {
@@ -40,12 +41,38 @@ a {
 	z-index:1;
 }
 
+.clear {
+    clear: both;
+}
+
 .white {
 	color: white;
 }
 
 .black {
 	color: black;
+}
+
+.leftWideCol {
+    width: 570px;
+    float: left;
+}
+
+.leftNarrowCol {
+    float: left;
+    display: block;
+    padding-top: 25px;
+}
+
+.rightWideCol {
+    float: right;
+    width: 570px;
+}
+
+.rightNarrowCol {
+    float: right;
+    display: block;
+    padding-top: 25px;
 }
 
 .photo {
@@ -58,15 +85,6 @@ a {
 
 .hidden {
 	display: none;
-}
-
-.downloadPDF {
-	margin-top: 10px;
-	display: block;
-}
-
-.downloadPDF a {
-	color: white;
 }
 
 #baner {
@@ -115,18 +133,18 @@ a {
 }
 
 #aMore {
-    top: 195px;
+    top: 240px;
     left: 20px;
     position: relative;
     display: block;
     width: 350px;
     height: 70px;
-    border: 1px solid;  
+/*     border: 1px solid;   */
 }
 
 
 #second {
-	width:900px;
+
 }
 
 
@@ -138,6 +156,10 @@ a {
 
 .third {
 	background-image: url(pict/background_3.png);
+}
+
+.jurors {
+    padding-top: 60px;
 }
 
 .shoe {
@@ -163,6 +185,7 @@ a {
 }
 
 #menu {
+        font-family: 'Play', sans-serif;
 	position: fixed;
 	top:0px;
 	width:100%;
@@ -170,7 +193,7 @@ a {
 	line-height: 60px;
 	text-align:center;
 	z-index:1000;
-	background-color:rgba(50,40,208,0.9);
+	background-color:rgba(0,0,0,0.9);
 }
 
 #menu a {
@@ -197,51 +220,21 @@ a {
 
 .panel {
 	padding-top:60px;
-	padding-bottom:80px;
+/* 	padding-bottom:40px; */
+}
+
+.stdSize {
+        width: 900px;
 }
 
 #footer {
-	background-image: url(pict/stopka.png);
+        margin-top: 75px;
+	background-image: url(pict/stopka.jpg);
 	background-position: 50% 0;
 	background-repeat: no-repeat;
-	height:350px;
+	height:200px;
 	color: #384ab6;
 	width: 100%;
-	margin-bottom: 280px;
-}
-
-#footerCV {
-	width: 140px;
-	height: 100px;
-	top: 150px;
-	position: relative;
-	text-align: center;
-	padding-top: 60px;
-	display: block;
-}
-
-#laptop {
-	background-image: url(pict/laptop.png);
-	background-repeat: no-repeat;
-	width: 980px;
-	height: 586px;
-}
-
-#laptopText {
-	width: 900px;
-}
-
-#laptopSliderContainer {
-	position: absolute;
-	top: 1042px;
-	width:100%;
-}
-
-#laptopSlider {
-	position: relative;
-	width: 100%;
-	max-width: 744px;
-	margin: 0px auto;
 }
 
 .sliderArrows {
@@ -325,6 +318,7 @@ a {
 
 .sliderContainer {
 	width:100%;
+        margin-top: 30px;
 }
 
 .sliderText {
@@ -333,19 +327,19 @@ a {
 }
 
 #third {
-    background-color: black;
+
 }
 
 #fourth {
-	background-color: white;
+
 }
 
 #fifth {
-	background-color: black;
+
 }
 
 #sixth {
-	background-color: white;
+
 }
 
 .tvDescription {
@@ -356,70 +350,9 @@ a {
 	background-position: 50% 0;
 	background-repeat: no-repeat;
 	background-image: url(pict/telewizorWWW.png);
-	padding-top: 25px;
+	padding-top: 73px;
 }
 
 #seventh {
-	background-color: black;
-}
 
-.grayscale {
-	-webkit-filter: grayscale(1); -webkit-filter: grayscale(100%); -moz-filter: grayscale(100%);
-	filter: gray; filter: grayscale(100%);
-	filter: url(pict/filters.svg#grayscale);	
 }
-
-.rectTurnLeft {
-	overflow: hidden;
-	position:absolute;
-	width:158px;
-	height:158px;
-	top:45px;
-	left:45px;	
-	-moz-transform:rotate(-45deg);
-	-o-transform:rotate(-45deg);
-	-webkit-transform:rotate(-45deg);
-	-ms-transform:rotate(0deg);
-	transform:rotate(-45deg);
-/* 	transition: width 300ms, height: 300ms; */
-/* 	-moz-transition:width 300ms, height 300ms, left 600ms, top 600ms; */
-}
-
-.rectTurnRight {
-	width:250px;
-	height:250px;
-	position:absolute;
-	left: -35px;
-	top: -35px;
-	-moz-transform:rotate(45deg);
-	-o-transform:rotate(45deg);
-	-webkit-transform:rotate(45deg);
-	-ms-transform:rotate(45deg);
-	transform:rotate(45deg);		
-}
-
-.rectInner {
-	width: 250px;
-	height: 250px;
-	position: absolute;
-}
-
-.rectPict {
-	margin-top: 10px;
-	margin-left: -5px;
-}
-
-.rectHalf {
-	position: absolute;
-	width: 150%;
-	height: 100%;
-	top: 50%;
-	background-color: rgba(0,0,0,0.6);
-	margin-left: -5px;
-	color: white;
-	text-align: center;
-	font-size: x-large;
-	padding-top: 10%;
-	text-decoration: none;
-}
-
