Poprawiony telewizor - łata

--- a/style.css
+++ b/style.css
@@ -349,8 +349,8 @@ a {
 .tv {
 	background-position: 50% 0;
 	background-repeat: no-repeat;
-	background-image: url(pict/telewizorWWW.png);
-	padding-top: 73px;
+	background-image: url(pict/telewizorWWW.jpg);
+	padding-top: 90px;
 }
 
 #seventh {
